load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/reddit/baseplate.go
# gazelle:exclude bazel-baseplate.go
gazelle(name = "gazelle")

go_library(
    name = "baseplate_go",
    srcs = [
        "baseplate.go",
        "doc.go",
        "drainer.go",
    ],
    importpath = "github.com/reddit/baseplate.go",
    visibility = ["//visibility:public"],
    deps = [
        "//batchcloser",
        "//ecinterface",
        "//errorsbp",
        "//log",
        "//metricsbp",
        "//runtimebp",
        "//secrets",
        "//tracing",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "baseplate_go_test",
    size = "small",
    srcs = [
        "baseplate_test.go",
        "drainer_example_test.go",
        "drainer_test.go",
    ],
    deps = [
        ":baseplate_go",
        "//ecinterface",
        "//internal/gen-go/reddit/baseplate",
        "//log",
        "//metricsbp",
        "//runtimebp",
        "//secrets",
        "//thriftbp",
        "//tracing",
    ],
)
