load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "closers.go",
        "doc.go",
    ],
    importpath = "github.com/reddit/baseplate.go/batchcloser",
    visibility = ["//visibility:public"],
    deps = ["//batcherror:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["closers_test.go"],
    embed = [":go_default_library"],
)
