load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "batchcloser",
    srcs = [
        "closers.go",
        "doc.go",
    ],
    importpath = "github.com/reddit/baseplate.go/batchcloser",
    visibility = ["//visibility:public"],
    deps = ["//errorsbp"],
)

go_test(
    name = "batchcloser_test",
    size = "small",
    srcs = ["closers_test.go"],
    deps = [":batchcloser"],
)
