load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "breakerbp",
    srcs = [
        "doc.go",
        "failure_ratio.go",
        "interface.go",
    ],
    importpath = "github.com/reddit/baseplate.go/breakerbp",
    visibility = ["//visibility:public"],
    deps = [
        "//log",
        "//metricsbp",
        "@com_github_apache_thrift//lib/go/thrift",
        "@com_github_sony_gobreaker//:gobreaker",
    ],
)

go_test(
    name = "breakerbp_test",
    size = "small",
    srcs = ["failure_ratio_test.go"],
    deps = [
        ":breakerbp",
        "//thriftbp/thrifttest",
        "@com_github_apache_thrift//lib/go/thrift",
    ],
)
