load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clientpool",
    srcs = [
        "channel.go",
        "doc.go",
        "errors.go",
        "interface.go",
    ],
    importpath = "github.com/reddit/baseplate.go/clientpool",
    visibility = ["//visibility:public"],
)

go_test(
    name = "clientpool_test",
    size = "small",
    srcs = [
        "bench_test.go",
        "channel_test.go",
        "errors_test.go",
        "interface_test.go",
    ],
    deps = [
        ":clientpool",
        "//retrybp",
    ],
)
