load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "interface.go",
        "mock.go",
    ],
    importpath = "github.com/reddit/baseplate.go/ecinterface",
    visibility = ["//visibility:public"],
    deps = ["//secrets:go_default_library"],
)
