load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ecinterface",
    srcs = [
        "doc.go",
        "global.go",
        "interface.go",
        "mock.go",
    ],
    importpath = "github.com/reddit/baseplate.go/ecinterface",
    visibility = ["//visibility:public"],
    deps = [
        "//log",
        "//secrets",
    ],
)
