load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "edgecontext",
    srcs = [
        "doc.go",
        "edgecontext.go",
        "oauth_client.go",
        "req_context.go",
        "service.go",
        "token.go",
        "user.go",
        "validator.go",
    ],
    importpath = "github.com/reddit/baseplate.go/edgecontext",
    visibility = ["//visibility:public"],
    deps = [
        "//ecinterface",
        "//experiments",
        "//internal/gen-go/reddit/edgecontext",
        "//log",
        "//secrets",
        "//timebp",
        "@com_github_apache_thrift//lib/go/thrift",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_reddit_jwt_go_v3//:jwt-go",
    ],
)

go_test(
    name = "edgecontext_test",
    size = "small",
    srcs = [
        "edgecontext_test.go",
        "init_test.go",
        "validator_test.go",
    ],
    deps = [
        ":edgecontext",
        "//experiments",
        "//log",
        "//secrets",
        "//timebp",
        "@com_github_apache_thrift//lib/go/thrift",
        "@com_github_gofrs_uuid//:uuid",
    ],
)
