load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "batch.go",
        "doc.go",
    ],
    importpath = "github.com/reddit/baseplate.go/errorsbp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "batch_test.go",
        "doc_test.go",
    ],
    embed = [":go_default_library"],
)
