load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errorsbp",
    srcs = [
        "batch.go",
        "doc.go",
        "prefix.go",
        "suppressor.go",
    ],
    importpath = "github.com/reddit/baseplate.go/errorsbp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errorsbp_test",
    size = "small",
    srcs = [
        "batch_example_test.go",
        "batch_test.go",
        "prefix_example_test.go",
        "suppressor_example_test.go",
        "suppressor_test.go",
    ],
    deps = [
        ":errorsbp",
        "//internal/gen-go/reddit/baseplate",
    ],
)
