load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "events.go",
    ],
    importpath = "github.com/reddit/baseplate.go/events",
    visibility = ["//visibility:public"],
    deps = [
        "//mqsend:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["events_test.go"],
    embed = [":go_default_library"],
    # This test is marked as flaky as sometimes the running environment in drone
    # is just too slow that TestV2Put would fail because of the timeout.
    # See https://cloud.drone.io/reddit/baseplate.go/496/1/2 for an example.
    flaky = True,
    deps = [
        "//mqsend:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
    ],
)
