load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "experiments.go",
        "targeting.go",
        "variants.go",
    ],
    importpath = "github.com/reddit/baseplate.go/experiments",
    visibility = ["//visibility:public"],
    deps = [
        "//filewatcher:go_default_library",
        "//log:go_default_library",
        "//timebp:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "experiments_test.go",
        "targeting_test.go",
        "variants_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//timebp:go_default_library"],
)
