load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "experiments",
    srcs = [
        "doc.go",
        "experiments.go",
        "targeting.go",
        "variants.go",
    ],
    importpath = "github.com/reddit/baseplate.go/experiments",
    visibility = ["//visibility:public"],
    deps = [
        "//filewatcher",
        "//log",
        "//timebp",
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_test(
    name = "experiments_test",
    size = "small",
    srcs = [
        "experiments_test.go",
        "targeting_test.go",
        "variants_test.go",
    ],
    embed = [":experiments"],
    deps = ["//timebp"],
)
