load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filter.go",
        "http.go",
    ],
    importpath = "github.com/reddit/baseplate.go/filter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["http_test.go"],
    embed = [":go_default_library"],
)
