load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcbp",
    srcs = [
        "client_middlewares.go",
        "headers.go",
        "server_middlewares.go",
        "tracing.go",
    ],
    importpath = "github.com/reddit/baseplate.go/grpcbp",
    visibility = ["//visibility:public"],
    deps = [
        "//ecinterface",
        "//log",
        "//tracing",
        "//transport",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)

go_test(
    name = "grpcbp_test",
    srcs = ["client_middlewares_test.go"],
    deps = [
        "//tracing",
        "@com_github_grpc_ecosystem_go_grpc_middleware//testing",
        "@com_github_grpc_ecosystem_go_grpc_middleware//testing/testproto",
    ],
)
