load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httpbp",
    srcs = [
        "client_middlewares.go",
        "config.go",
        "doc.go",
        "errors.go",
        "handler.go",
        "headers.go",
        "healthcheck.go",
        "middlewares.go",
        "response.go",
        "server.go",
    ],
    importpath = "github.com/reddit/baseplate.go/httpbp",
    visibility = ["//visibility:public"],
    deps = [
        "//:baseplate_go",
        "//breakerbp",
        "//ecinterface",
        "//errorsbp",
        "//internal/gen-go/reddit/baseplate",
        "//log",
        "//retrybp",
        "//secrets",
        "//signing",
        "//tracing",
        "@com_github_avast_retry_go//:retry-go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
    ],
)

go_test(
    name = "httpbp_test",
    size = "small",
    srcs = [
        "client_middlewares_test.go",
        "errors_example_test.go",
        "errors_test.go",
        "example_server_test.go",
        "fixtures_test.go",
        "handler_test.go",
        "headers_test.go",
        "healthcheck_test.go",
        "middlewares_test.go",
        "response_test.go",
        "server_test.go",
    ],
    embed = [":httpbp"],
    deps = [
        "//:baseplate_go",
        "//breakerbp",
        "//ecinterface",
        "//internal/gen-go/reddit/baseplate",
        "//log",
        "//mqsend",
        "//redis/deprecated/redisbp",
        "//retrybp",
        "//secrets",
        "//tracing",
        "@com_github_avast_retry_go//:retry-go",
    ],
)
