load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kafkabp",
    srcs = [
        "config.go",
        "consumer.go",
        "doc.go",
        "group_consumer.go",
        "rack.go",
    ],
    importpath = "github.com/reddit/baseplate.go/kafkabp",
    visibility = ["//visibility:public"],
    deps = [
        "//log",
        "//metricsbp",
        "//tracing",
        "@com_github_shopify_sarama//:sarama",
    ],
)

go_test(
    name = "kafkabp_test",
    size = "small",
    srcs = [
        "config_test.go",
        "consumer_test.go",
        "rack_test.go",
    ],
    embed = [":kafkabp"],
    deps = [
        "//:baseplate_go",
        "@com_github_shopify_sarama//:sarama",
        "@com_github_shopify_sarama//mocks",
    ],
)
