load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = [
        "config.go",
        "context.go",
        "core_wrapper.go",
        "doc.go",
        "encoder.go",
        "kit_wrapper.go",
        "log.go",
        "sentry.go",
        "wrapper.go",
    ],
    importpath = "github.com/reddit/baseplate.go/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apache_thrift//lib/go/thrift",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "log_test",
    size = "small",
    srcs = [
        "core_wrapper_test.go",
        "kit_wrapper_test.go",
        "log_test.go",
        "sentry_test.go",
        "wrapper_example_test.go",
        "wrapper_test.go",
        "zap_wrapper_test.go",
    ],
    embed = [":log"],
    deps = [
        "//metricsbp",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_go_kit_kit//log",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
