load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mqsend",
    srcs = [
        "doc.go",
        "errors.go",
        "interface.go",
        "mqsend_linux.go",
        "mqsend_mock.go",
        "mqsend_other.go",
    ],
    importpath = "github.com/reddit/baseplate.go/mqsend",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "mqsend_test",
    size = "small",
    srcs = [
        "mqsend_linux_test.go",
        "mqsend_mock_test.go",
        "mqsend_other_test.go",
        "mqsend_test.go",
    ],
    deps = [
        ":mqsend",
        "//randbp",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)
