load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "rand.go",
        "sample.go",
        "seed.go",
        "source.go",
        "string.go",
    ],
    importpath = "github.com/reddit/baseplate.go/randbp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "rand_test.go",
        "sample_test.go",
    ],
    embed = [":go_default_library"],
)
