load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "doc.go",
        "hooks.go",
        "monitored_client.go",
    ],
    importpath = "github.com/reddit/baseplate.go/redisbp",
    visibility = ["//visibility:public"],
    deps = [
        "//errorsbp:go_default_library",
        "//metricsbp:go_default_library",
        "//tracing:go_default_library",
        "@com_github_go_redis_redis_v7//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "config_test.go",
        "example_config_test.go",
        "example_hooks_test.go",
        "example_monitored_client_test.go",
        "hooks_test.go",
        "monitored_client_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//mqsend:go_default_library",
        "//thriftbp:go_default_library",
        "//tracing:go_default_library",
        "@com_github_alicebob_miniredis//:go_default_library",
        "@com_github_go_redis_redis_v7//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
