load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "filters.go",
        "retry.go",
    ],
    importpath = "github.com/reddit/baseplate.go/retrybp",
    visibility = ["//visibility:public"],
    deps = [
        "//batcherror:go_default_library",
        "//clientpool:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filters_test.go",
        "fixtures_test.go",
        "retry_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//batcherror:go_default_library",
        "//clientpool:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
    ],
)
